# inkyframe

./: .gitignore  README.md
BarrelVision/: README.md  og-tech.md  scraping.md  (+1 more)
BarrelVision/web-scraper/: pyproject.toml
BarrelVision/web-scraper/soup/: tidesoup_20230526172344.html  tidesoup_20230528120811.html  tidesoup_20230528120811.json  tidesoup_20230706051454.html  tidesoup_20230706053956.html  tidesoup_20230706054137.html  wavesoup_20230526172344.html  wavesoup_20230528120811.html  wavesoup_20230528120811.json  wavesoup_20230706051454.html  wavesoup_20230706053956.html  wavesoup_20230706054137.html
BarrelVision/web-scraper/tests/surf-forecasts/: forecast.html  tides.html  tides_5_17.html
BarrelVision/web-scraper/tests/surf-forecasts/Blackies 48 hour detailed Surf Forecast_files/: a.html  application-20b404a6.css  application-49757be250720c8c9c71d6e852ff8e1383f5a58db99197127b4401e597277e4c.css  application-687d6be1c918133d6c90.js.download  application-7f146643079e83f1971c0ae476cd152bc1ca13b7f17bd86460cfb470542c6327.js.download  forecast-table-1bf34f51.chunk.css  forecast-table-98f627fea26e050ed759.chunk.js.download  gtm.js.download  leaflet-0d597de8.chunk.css  leaflet-ad7a9596550c97cbe723.chunk.js.download  printable-c8a287591813e0904b475fc9c765ec42dfaffd461564aec662b47184dbcc5519.css  vendors_leaflet-cdb5e8550ee9834d9e21.chunk.js.download  vendors_leaflet-f3ef35e0.chunk.css  widget-0f1b0329.css  widget-20ae4b56d075897451f5.js.download  widget.css
BarrelVision/web-scraper/web_scraper/: constants.py  main.py  test.py  test2.py  tide_parser.py  wave_parser.py
(+31 files in other folders)
